--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>GriTech - Farmer Dashboard (Demo)</title>
+  <title>EcoLabs - Farmer Dashboard </title>
 
   <!-- Tailwind CDN (play CDN for quick setup) -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -516,3 +516,4 @@
   </script>
 </body>
 </html>
+
